<resources>
    <string name="app_name">ArabicLingo</string>
    <string name="title_home">Instructions</string>
    <string name="title_dashboard">Translate</string>
    <string name="title_notifications">Camera</string>



    <string name="phrase_1">مرحبًا</string>
    <string name="phrase_2">كيف حالك؟</string>
    <string name="phrase_3">شكرًا</string>
    <string name="phrase_4">من فضلك</string>
    <string name="phrase_5">نعم</string>
    <string name="phrase_6">لا</string>
    <string name="phrase_7">مع السلامة</string>
    <string name="phrase_8">أنا آسف</string>
    <string name="phrase_9">أنا لا أفهم</string>
    <string name="phrase_10">ماذا تعني؟</string>
    <string name="phrase_11">كم الساعة؟</string>
    <string name="phrase_12">أين هو؟</string>
    <string name="phrase_13">كم هذا؟</string>
    <string name="phrase_14">أنا جائع</string>
    <string name="phrase_15">أنا عطشان</string>
    <string name="phrase_16">أنا تعبان</string>
    <string name="phrase_17">أنا بخير</string>
    <string name="phrase_18">ما اسمك؟</string>
    <string name="phrase_19">أين الحمام؟</string>
    <string name="phrase_20">ماذا تفعل؟</string>

    <string-array name="phrases_array">
        <item>@string/phrase_1</item>
        <item>@string/phrase_2</item>
        <item>@string/phrase_3</item>
        <item>@string/phrase_4</item>
        <item>@string/phrase_5</item>
        <item>@string/phrase_6</item>
        <item>@string/phrase_7</item>
        <item>@string/phrase_8</item>
        <item>@string/phrase_9</item>
        <item>@string/phrase_10</item>
        <item>@string/phrase_11</item>
        <item>@string/phrase_12</item>
        <item>@string/phrase_13</item>
        <item>@string/phrase_14</item>
        <item>@string/phrase_15</item>
        <item>@string/phrase_16</item>
        <item>@string/phrase_17</item>
        <item>@string/phrase_18</item>
        <item>@string/phrase_19</item>
        <item>@string/phrase_20</item>
    </string-array>


    <string name="answer_1">Hello</string>
    <string name="answer_2">How are you?</string>
    <string name="answer_3">Thank you</string>
    <string name="answer_4">Please</string>
    <string name="answer_5">Yes</string>
    <string name="answer_6">No</string>
    <string name="answer_7">Goodbye</string>
    <string name="answer_8">I am sorry</string>
    <string name="answer_9">I do not understand</string>
    <string name="answer_10">What does it mean?</string>
    <string name="answer_11">What is the time?</string>
    <string name="answer_12">Where is it?</string>
    <string name="answer_13">How much is this?</string>
    <string name="answer_14">I am hungry</string>
    <string name="answer_15">I am thirsty</string>
    <string name="answer_16">I am tired</string>
    <string name="answer_17">I am fine</string>
    <string name="answer_18">What is your name?</string>
    <string name="answer_19">Where is the bathroom?</string>
    <string name="answer_20">What are you doing?</string>

    <string-array name="answers_array">
        <item>@string/answer_1</item>
        <item>@string/answer_2</item>
        <item>@string/answer_3</item>
        <item>@string/answer_4</item>
        <item>@string/answer_5</item>
        <item>@string/answer_6</item>
        <item>@string/answer_7</item>
        <item>@string/answer_8</item>
        <item>@string/answer_9</item>
        <item>@string/answer_10</item>
        <item>@string/answer_11</item>
        <item>@string/answer_12</item>
        <item>@string/answer_13</item>
        <item>@string/answer_14</item>
        <item>@string/answer_15</item>
        <item>@string/answer_16</item>
        <item>@string/answer_17</item>
        <item>@string/answer_18</item>
        <item>@string/answer_19</item>
        <item>@string/answer_20</item>
    </string-array>


    <string-array name="transliterations_array">
        <item>Marhaban</item>
        <item>Kayfa halak?</item>
        <item>Shukran</item>
        <item>Min fadlik</item>
        <item>Naam</item>
        <item>Laa</item>
        <item>Ma\'a al-salamah</item>
        <item>Ana aasif</item>
        <item>Ana laa afham</item>
        <item>Matha taani?</item>
        <item>Kam al-saa\'ah?</item>
        <item>Ayna huwa?</item>
        <item>Kam hatha?</item>
        <item>Ana ja\'i</item>
        <item>Ana \'atshan</item>
        <item>Ana ta\'baan</item>
        <item>Ana bikhair</item>
        <item>Ma ismuka?</item>
        <item>Ayna al-hammaam?</item>
        <item>Maadha taf\'al?</item>
    </string-array>



    <string name="welcome_message">
        Welcome to ArabicLingo!\n\n

       ArabicLingo offers a comprehensive learning experience, empowering you to communicate effectively in Arabic. Whether
        you\'re a beginner or seeking to refine your proficiency, ArabicLingo is your partner in language learning. Start your
        journey now and unlock the world of Arabic language and culture.\n
    </string>

    <string name="learn_tab_instructions">
    Translate Tab:\n\n

    In the Translate tab, you will find a list of Arabic phrases. To start learning, follow these steps:\n\n

        1. Tap on a specific phrase from the list.\n
        2. A box will appear where you can enter the English translation of the selected Arabic phrase.\n
        3. Press the "Submit" button.\n
        4. You will be prompted whether your answer is correct. If correct, the Arabic phrase will turn green, and if incorrect it will turn red.\n

    </string>

    <string name="camera_tab_instructions">
    Camera Tab:\n\n

    In the Camera tab, you can utilize your phone\'s camera for a unique learning experience:\n\n

        1. Tap on the Camera tab.\n
        2. Use your phone\'s camera to take a photo of your handwritten English writing.\n
        3. You can save the photo to your camera roll for future reference.\n
        4. You can also share the photo with your friends to get feedback or discuss your progress.\n
        5. You will receive a text notification translating any English writing that appeared in the photo.\n\n

    We hope you enjoy using ArabicLingo to learn Arabic and enhance your language skills. Happy learning!\n\n
    </string>

    <string name="take_picture">Take Picture</string>
    <string name="handwriting">Image of handwriting to share with friends.</string>
    <string name="share">Share</string>
    <string name="save_to_gallery">Save to Gallery</string>
    <string name="share_an_image">Share an Image</string>
    <string name="save_an_image">Save an image</string>
    <string name="enter_your_translation">Enter your translation</string>
    <string name="translate_the_phrase">Translate the Phrase:</string>
    <string name="transliterate">Transliterate</string>



    <!-- ARABIC DEFINITION TRANSLATIONS OF DEFAULT ENGLISH DEFINITIONS -->

    <string name="app_name_ar">عربي لنجو</string>

    <string name="title_home_ar">التعليمات</string>
    <string name="title_dashboard_ar">ترجمة</string>
    <string name="title_notifications_ar">كاميرا</string>


    <string name="welcome_message_ar">
        مرحبًا بك في عربي لنجو!\n\n

        يقدم عربي لنجو تجربة تعلم شاملة تمكنك من التواصل بفعالية باللغة العربية. سواء كنت مبتدئًا أو تسعى لتحسين مهاراتك، فإن عربي لنجو هو شريكك في تعلم اللغة. ابدأ رحلتك الآن واستكشف عالم اللغة والثقافة العربية.\n
    </string>

    <string name="learn_tab_instructions_ar">
        علامة الترجمة:\n\n

        في علامة الترجمة، ستجد قائمة من العبارات العربية. لبدء التعلم، اتبع هذه الخطوات:\n\n

            ١ انقر فوق عبارة معينة من القائمة.\n
            ٢ سيظهر مربع حيث يمكنك إدخال الترجمة الإنجليزية للعبارة العربية المحددة.\n
            ٣ اضغط على زر "إرسال".\n
            ٤ سيتم طلب منك ما إذا كانت إجابتك صحيحة. إذا كانت صحيحة، ستتحول العبارة العربية إلى اللون الأخضر، وإذا كانت خاطئة ستتحول إلى اللون الأحمر.\n

    </string>

    <string name="camera_tab_instructions_ar">
        علامة الكاميرا:\n\n

        في علامة الكاميرا، يمكنك استخدام كاميرا هاتفك لتجربة تعلم فريدة:\n\n

            ١ انقر على علامة الكاميرا.\n
            ٢ استخدم كاميرا هاتفك لالتقاط صورة لكتابتك العربية اليدوية.\n
            ٣ يمكنك حفظ الصورة في معرض الصور الخاص بك للرجوع إليها في المستقبل.\n
            ٤ يمكنك أيضًا مشاركة الصورة مع أصدقائك للحصول على تقييم أو مناقشة تقدمك.\n
            ٥ ستتلقى إشعارًا نصيًا يترجم أي كتابة باللغة الإنجليزية التي تظهر في الصورة.\n\n

        نأمل أن تستمتع باستخدام ArabicLingo لتعلم اللغة العربية وتحسين مهاراتك اللغوية. استمتع بالتعلم!\n\n
    </string>

    <string name="take_picture_ar">التقط صورة</string>
    <string name="handwriting_ar">صورة للخط اليدوي لمشاركتها مع الأصدقاء.</string>
    <string name="share_ar">مشاركة</string>
    <string name="save_to_gallery_ar">حفظ في المعرض</string>
    <string name="share_an_image_ar">مشاركة صورة</string>
    <string name="save_an_image_ar">حفظ صورة</string>
    <string name="enter_your_translation_ar">أدخل ترجمتك</string>
    <string name="translate_the_phrase_ar">ترجم العبارة:</string>
    <string name="transliterate_ar">نقل الحروف</string>

</resources>