<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.notifications.NotificationsFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/handwriting"
            android:scaleX="0.95"
            android:scaleY="0.95"
            android:src="@mipmap/ic_launcher" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="40dp">

            <ImageButton
                android:id="@+id/btnShare"
                android:contentDescription="@string/share_an_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:src="@drawable/baseline_share_24"
                android:background="@drawable/circle_button_background"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btnTakePicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/take_picture" />

            <ImageButton
                android:id="@+id/btnSave"
                android:contentDescription="@string/save_an_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:src="@drawable/baseline_download_24"
                android:background="@drawable/circle_button_background"
                android:visibility="gone"/>
        </LinearLayout>
    </FrameLayout>
</ScrollView>
